--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+
+* {
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  z-index: -10;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 30px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.SearchInput{
+  min-width: 350px;
+  width: 30%;
+margin-bottom: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Weather {
+  display: flex;
+  flex-direction: column;
+  justify-content: center!important;
+  min-width: 350px;
+  min-height: 700px;
+  color: rgb(113, 113, 113);
+  border-radius: 35px;
+  padding: 30px;
+}
+
+.Container{
+  color: black ;
 }
