--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,14 @@ body {
   font-family: 'Roboto', Arial !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #c3c9d5;
 
+}
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  overscroll-behavior: none;
 }
 
 code {
