--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ margin-bottom: 30px;
   justify-content: center!important;
   width: 390px;
   color: rgb(113, 113, 113);
-  border: 1px solid rgb(255, 255, 255);
+  /* border: 1px solid rgb(255, 255, 255); */
   border-radius: 15px;
   padding: 30px;
 }
